--- a/.gitignore
+++ b/.gitignore
@@ -72,4 +72,6 @@ Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
-/VampireSlayers/Saved/Logs
+Content/Characters
+
+/Content/ModularGothicFantasyEnvironment
