--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,10 +2,10 @@
 GameName=VampireSlayers
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+EditorStartupMap=/Game/Maps/DefaultMap.DefaultMap
 LocalMapOptions=
 TransitionMap=None
-bUseSplitscreen=True
+bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
