Level Blockout Draft
- Added level blockout to project with overall areas in place.
- Updated door asset to rotate to open when instructed to.
- Added new map to test night time lighting.

--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,5 @@ Content/Characters
 /Content/ModularGothicFantasyEnvironment
 /Content/MedievalDungeon
 /Content/Weapon_Pack
+/Content/AncientTreasures
+/Content/Gothic_Cathedral
